# git-mcp-rs

./: Cargo.toml  Cross.toml  README.md  build.sh  install.sh
.github/workflows/: release.yml
src/: main.rs
